<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/button5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:background="#8C8A8A"
        android:fontFamily="sans-serif-black"
        android:hint="@string/nombreusuario"
        android:text="@string/usuario"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566"
        android:inputType="textPersonName"
        android:autofillHints="@string/nombreusuario" />

    <EditText
        android:id="@+id/button6"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:background="#8C8A8A"
        android:fontFamily="sans-serif-black"
        android:hint="@string/email"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email" />

    <EditText
        android:id="@+id/button7"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:background="#8C8A8A"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:text="@string/password"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        android:inputType="numberPassword"
        android:autofillHints="@string/password" />

    <EditText
        android:id="@+id/button8"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:background="#8C8A8A"
        android:fontFamily="sans-serif-black"
        android:hint="@string/confirmar_password"
        android:text="@string/confirma_password"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        android:inputType="numberPassword"
        android:autofillHints="@string/confirma_password" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:background="#8C8A8A"
        android:entries="@array/EDAD"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="321dp"
            android:layout_height="36dp"
            android:background="#8C8A8A"
            android:text="@string/femenino"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="#8C8A8A"
            android:text="@string/masculino" />
    </RadioGroup>

    <Button
        android:id="@+id/button9"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="107dp"
        android:hint="@string/registrarse"
        android:text="@string/registrarse"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>